# Dafnck-Machine-3.4

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  LICENSE  copy_files.sh  discord.md  docker-compose.mcp.yml  linkedIn.md  migration_validation_report.md  setup.sh  setup_interactive.sh  tasks.example.json  test_wsl_bridge.bat  test_wsl_bridge.sh  twitch.tv.md
.cursor/: config-help.md  mcp.json  mcp.json.cursor_agent  settings.json  tool_config.json
00_RULES/: AI-MUST-READ.md  dhafnck_mcp.md
cursor_agent/: mcp_config_example.json  mcp_config_fixed.json  pyproject.toml  run_coverage.py  test.sh  test_debug_assignee_persistence.py  test_mcp_assignment_fix.py  tsconfig.json
cursor_agent/.cursor/rules/: configuration.mdc  ddd-structure.mdc  main_objectif.mdc  project_prd.mdc  test-project.mdc
cursor_agent/.cursor/rules/brain/: projects.json  projects.json.backup.20250621_105718
cursor_agent/.cursor/rules/tasks/: tasks.json
cursor_agent/.cursor/rules/tasks/backup/: tasks_backup_20250620_130250.json  tasks_backup_20250620_130257.json  tasks_backup_20250620_130327.json  tasks_backup_20250620_130347.json  tasks_backup_20250620_130354.json  tasks_backup_20250620_130436.json  tasks_backup_20250620_130603.json  tasks_backup_20250620_130645.json  tasks_backup_20250620_131159.json
cursor_agent/src/: __init__.py  mcp_server.py
cursor_agent/src/task_mcp/: __init__.py
cursor_agent/src/task_mcp/application/: __init__.py
cursor_agent/src/task_mcp/application/dtos/: __init__.py  task_dto.py
cursor_agent/src/task_mcp/application/services/: __init__.py  task_application_service.py
cursor_agent/src/task_mcp/application/use_cases/: __init__.py  call_agent.py  complete_task.py  create_task.py  delete_task.py  do_next.py  get_task.py  list_tasks.py  manage_dependencies.py  manage_subtasks.py  search_tasks.py  update_task.py
cursor_agent/src/task_mcp/domain/: __init__.py
cursor_agent/src/task_mcp/domain/entities/: __init__.py  agent.py  project.py  task.py  task_tree.py  work_session.py
cursor_agent/src/task_mcp/domain/enums/: __init__.py  agent_roles.py  common_labels.py  estimated_effort.py
cursor_agent/src/task_mcp/domain/events/: __init__.py  task_events.py
cursor_agent/src/task_mcp/domain/exceptions/: __init__.py  task_exceptions.py
cursor_agent/src/task_mcp/domain/repositories/: __init__.py  task_repository.py
cursor_agent/src/task_mcp/domain/services/: __init__.py  auto_rule_generator.py  orchestrator.py
cursor_agent/src/task_mcp/domain/value_objects/: __init__.py  priority.py  task_id.py  task_status.py
cursor_agent/src/task_mcp/infrastructure/: __init__.py
cursor_agent/src/task_mcp/infrastructure/repositories/: __init__.py  json_task_repository.py
cursor_agent/src/task_mcp/infrastructure/services/: __init__.py  agent_converter.py  agent_doc_generator.py  file_auto_rule_generator.py
cursor_agent/src/task_mcp/infrastructure/services/legacy/: __init__.py  models.py  project_analyzer.py  role_manager.py  rules_generator.py
cursor_agent/src/task_mcp/infrastructure/services/legacy/project_analyzer/: __init__.py  context_generator.py  core_analyzer.py  dependency_analyzer.py  file_operations.py  models.py  pattern_detector.py  structure_analyzer.py
cursor_agent/src/task_mcp/interface/: __init__.py  consolidated_mcp_server.py  consolidated_mcp_tools_v2.py  cursor_rules_tools.py  ddd_mcp_server.py  mcp_tools.py
cursor_agent/tests/: conftest.py
cursor_agent/tests/dev/integration/: test_api_edge_cases.py  test_auto_rule_integration.py  test_cross_module_workflows.py  test_e2e_journeys.py  test_manage_agent.py  test_manage_project.py  test_manage_subtask.py  test_manage_task_crud.py  test_mcp_integration.py  test_migration_integration.py  test_projects_json_format.py  test_role_integration.py  test_subtask_dependency_mcp.py
cursor_agent/tests/dev/unit/: README_Multi_Agent_Tests.md  test_agent_doc_generation.py  test_agent_entity_comprehensive.py  test_auto_rule_generation.py  test_business_rules.py  test_call_agent.py  test_complete_task.py  test_consolidated_mcp_server.py  test_consolidated_mcp_tools_v2.py  test_consolidated_tools.py  test_context_generator.py  test_coverage_improvement.py  test_cursor_rules_tools.py  test_ddd_boundaries.py  test_dependency_management.py  test_do_next_use_case.py  test_domain_entities.py  test_domain_entity_coverage_improvement.py  test_enum_comprehensive.py  test_file_auto_rule_generator_comprehensive.py  test_file_operations_comprehensive.py  test_json_task_repository_comprehensive.py  test_mcp_server.py  test_mcp_tools.py  test_mcp_tools_error_handling.py  test_mcp_tools_simple.py  test_multi_agent_domain_entities.py  test_multi_agent_orchestration_workflows.py  test_project_analyzer_facade.py  test_simplified_agent_registration.py  test_subtask_management.py  test_task_entity_comprehensive.py  test_task_tree_comprehensive.py  test_use_cases_edge_cases.py  test_value_objects.py  test_yaml_role_system.py
cursor_agent/tests/quick/: test_basic_api.py  test_call_agent_use_case.py  test_imports.py  test_server_start.py
cursor_agent/yaml-tools/: call_agent.py  convert_json_to_yaml.py  generate_enum_agents.py  test_call_agent.py  test_mcp_call_agent.py  unified_agent_validator.py
dhafnck_mcp_main/: COMPREHENSIVE_MULTI_AGENT_TEST_PLAN.md  COVERAGE_ANALYSIS_REPORT.md  CURSOR_MCP_SETUP.md  DEPLOYMENT_STATUS.md  DEVOPS_ANALYSIS_SUMMARY.md  Dockerfile  INTEGRATION_TEST_REPORT.md  MCP_INSPECTOR_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_SPECIFIC_SETUP.md  README.md  SETUP.md  TASK_MANAGEMENT_INTEGRATION.md  WSL_MCP_QUICK_FIX.md  WSL_MCP_TROUBLESHOOTING_GUIDE.md  connect_to_claude_code.py  cursor_debug_guide.md  diagnostic_connect.bat  diagnostic_connect.sh  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  env.example  final_status_check.sh  fix_claude_code_mcp.py  mcp_config.json  pyproject.toml  setup_project_mcp.py  test_integration.py  test_integration_working.py  test_mcp_connection.py  test_mcp_protocol.py  test_mvp_server.py  test_path_fix.py  test_project_specific.py  test_token_access.py  (+2 more)
(+408 files in other folders)
